Profiles for UDF should now consistently use IRIs.